--- a/.github/workflows/build-production-image.yml
+++ b/.github/workflows/build-production-image.yml
@@ -29,7 +29,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: 'Create env file'
+      - name: 'Create env file'  # copy environment in CI job
         run: |
           touch .env
           echo "${{ secrets.PRODUCTION_ENVIRONMENT }}" >> .env
