--- a/.github/workflows/build-production-image.yml
+++ b/.github/workflows/build-production-image.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.SERVER_IMAGE_NAME }}
 
@@ -39,12 +39,12 @@ jobs:
         uses: docker/build-push-action@v5
         id: build
         with:
-          context: ./
+          context: .
           file: ./Dockerfile.production
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           labels: ${{ steps.meta.outputs.labels }}
-          tags: ${{ env.REGISTRY }}/${{ env.SERVER_IMAGE_NAME }}:latest, ${{ env.REGISTRY }}/${{ env.SERVER_IMAGE_NAME }}:${{github.ref_name}}
+          tags: ${{ steps.meta.outputs.tags }}
 
       - name: Export digest
         run: |
