--- a/.github/workflows/build-production-image.yml
+++ b/.github/workflows/build-production-image.yml
@@ -15,19 +15,8 @@ jobs:
     env:
       APP_NAME: spree-backend
       BASE_DOCKER_IMAGE: ruby:3.2.0
-    strategy:
-      fail-fast: false
-      matrix:
-        platform:
-          - linux/amd64
-          - linux/arm64
 
     steps:
-      - name: Prepare
-        run: |
-          platform=${{ matrix.platform }}
-          echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
-
       - name: Checkout Repository
         uses: actions/checkout@v2
 
@@ -53,7 +42,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile.production
-          platforms: ${{ matrix.platform }}
+          platforms: linux/arm64
           push: true
           labels: ${{ steps.meta.outputs.labels }}
           tags: ghcr.io/spreehood/spree-backend:latest, ghcr.io/spreehood/spree-backend:${{github.ref_name}}
