--- a/.github/workflows/build-production-image.yml
+++ b/.github/workflows/build-production-image.yml
@@ -37,6 +37,9 @@ jobs:
         with:
           images: ${{ env.SERVER_IMAGE_NAME }}
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         id: build
