--- a/.github/workflows/build-production-image.yml
+++ b/.github/workflows/build-production-image.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile.production
-          platforms: linux/amd64, linux/arm64
+          platforms: linux/amd64
           push: true
           labels: ${{ steps.meta.outputs.labels }}
           tags: ghcr.io/spreehood/spree-backend:latest, ghcr.io/spreehood/spree-backend:${{github.ref_name}}
